2009-03-10  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Keep `--silent-rules' across triggered automake reruns.
	* automake.in (usage): Reformat to be a bit clearer.
	(handle_configure): Remove substitutions %STRICTNESS% and
	%USE-DEPS% in favor of a new substitution %AUTOMAKE-OPTIONS%
	that carries over all needed flags.
	* lib/am/configure.am (%MAKEFILE-IN%): Adjust rule.
	* tests/flavor.test: New test, to ensure --$flavor (gnu,
	gnits, foreign, cygnus), --ignore-deps, and --silent-rules are
	preserved across automake reruns.
	* tests/Makefile.am: Update.

2009-03-09  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Provide variables for silencing of user rules.
	* automake.in (handle_languages): Always define `AM_V_GEN' and
	`AM_V_at'.
	* doc/automake.texi (Options): Document these flags.
	* tests/silent7.test: New test.
	* tests/Makefile.am: Update.

	Redo variable naming for `silent' machinery.
	The public variables are named `AM_V_' plus the compiler
	short-hand now, e.g.: AM_V_CC, AM_V_CXXLD, AM_V_GEN.  The
	dispatch variables are internal details and begin with
	`am__v_'.
	* automake.in (verbose_var): Update comment.
	(verbose_private_var): New function.  Order functions so that
	ones not needed outside this section are listed first.
	(verbose_dispatch): Remove, no need to factor this.
	(define_verbose_var, define_verbose_libtool): Use
	verbose_private_var.
	(define_verbose_tagvar): Likewise; and simplify.
	Report by Jan Engelhardt.

	Let -Wportability turn on/off the portability-recursive channel.
	* lib/Automake/ChannelDefs.pm (switch_warning): switch
	`portability-recursive' channel as well if changing the
	`portability' channel.
	* tests/dollarvar2.test: New test.
	* tests/Makefile.am: Update.

2009-03-07  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	New automake command line option `--silent-rules'.
	* automake.in (parse_arguments): Accept `--silent-rules; let it
	override command line warning settings.
	(usage): Document it.