@@ -71,7 +71,7 @@ if %FASTDEP%
 ?GENERIC??SUBDIROBJ?	%COMPILE% -MT %OBJ% -MD -MP -MF %DEPBASE%.Tpo %-c% -o %OBJ% %SOURCEFLAG%%SOURCE% &&\
 ?GENERIC??SUBDIROBJ?	$(am__mv) %DEPBASE%.Tpo %DEPBASE%.Po
 else !%FASTDEP%
-	%VERBOSE% @AM_BACKSLASH@
+?VERBOSE?	%VERBOSE% @AM_BACKSLASH@
 if %AMDEP%
 	source='%SOURCE%' object='%OBJ%' libtool=no @AMDEPBACKSLASH@
 	DEPDIR=$(DEPDIR) $(%FPFX%DEPMODE) $(depcomp) @AMDEPBACKSLASH@
@@ -99,7 +99,7 @@ if %FASTDEP%
 ?GENERIC??SUBDIROBJ?	%COMPILE% -MT %OBJOBJ% -MD -MP -MF %DEPBASE%.Tpo %-c% -o %OBJOBJ% %SOURCEFLAG%`$(CYGPATH_W) '%SOURCE%'` &&\
 ?GENERIC??SUBDIROBJ?	$(am__mv) %DEPBASE%.Tpo %DEPBASE%.Po
 else !%FASTDEP%
-	%VERBOSE% @AM_BACKSLASH@
+?VERBOSE?	%VERBOSE% @AM_BACKSLASH@
 if %AMDEP%
 	source='%SOURCE%' object='%OBJOBJ%' libtool=no @AMDEPBACKSLASH@
 	DEPDIR=$(DEPDIR) $(%FPFX%DEPMODE) $(depcomp) @AMDEPBACKSLASH@
@@ -129,7 +129,7 @@ if %FASTDEP%
 ?GENERIC??SUBDIROBJ?	%LTCOMPILE% -MT %LTOBJ% -MD -MP -MF %DEPBASE%.Tpo %-c% -o %LTOBJ% %SOURCEFLAG%%SOURCE% &&\
 ?GENERIC??SUBDIROBJ?	$(am__mv) %DEPBASE%.Tpo %DEPBASE%.Plo
 else !%FASTDEP%
-	%VERBOSE% @AM_BACKSLASH@
+?VERBOSE?	%VERBOSE% @AM_BACKSLASH@
 if %AMDEP%
 	source='%SOURCE%' object='%LTOBJ%' libtool=yes @AMDEPBACKSLASH@
 	DEPDIR=$(DEPDIR) $(%FPFX%DEPMODE) $(depcomp) @AMDEPBACKSLASH@
