@@ -1,3 +1,10 @@
+2009-03-11  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	Drop extra line from compile rules when `silent' is not used.
+	* lib/am/depend2.am [!%FASTDEP%]: Only use the `%VERBOSE%
+	@AM_BACKSLASH@' extra line if ?VERBOSE?.
+	Report by Ralf Corsepius.
+
 2009-03-10  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	Keep `--silent-rules' across triggered automake reruns.
